implement /internal/appversions endpoint (#640)
