# vip-application/src/main/java/fr/insalyon/creatis/vip/application/models/AppVersion.java
@@ -1,9 +1,11 @@
 package fr.insalyon.creatis.vip.application.models;
 
-import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import com.google.gwt.user.client.rpc.IsSerializable;
@@ -15,13 +17,14 @@ public class AppVersion implements IsSerializable {
     private String descriptor;
     private String doi;
     private boolean visible;
-    private List<Resource> resources;
-    private List<Tag> tags;
+    private Set<Resource> resources;
+    private Set<Tag> tags;
     private Map<String, String> settings;
     private String source;
     private String note;
 
-    public AppVersion() {}
+    public AppVersion() {
+    }
 
     public AppVersion(String applicationName, String version, String descriptor,
                       Map<String, String> settings, boolean visible, String source, String note) {
@@ -31,8 +34,8 @@ public class AppVersion implements IsSerializable {
         this.visible = visible;
         this.source = source;
         this.note = note;
-        this.resources = new ArrayList<>();
-        this.tags = new ArrayList<>();
+        this.resources = new HashSet<>();
+        this.tags = new HashSet<>();
         this.settings = settings;
     }
 
@@ -47,7 +50,7 @@ public class AppVersion implements IsSerializable {
     }
 
     public AppVersion(String applicationName, String version, String descriptor,
-                      String doi, boolean visible, String source, String note, List<Resource> resources, List<Tag> tags) {
+                      String doi, boolean visible, String source, String note, Set<Resource> resources, Set<Tag> tags) {
         this(applicationName, version, descriptor, new HashMap<>(), visible, source, note);
         this.doi = doi;
         this.resources = resources;
@@ -63,13 +66,17 @@ public class AppVersion implements IsSerializable {
     }
 
     public String getDescriptorFilename() {
-        // Return the "canonical filename" of the boutiques descriptor for this AppVersion.
-        // Both applicationName and version strings are assumed to be filename-safe already,
+        // Return the "canonical filename" of the boutiques descriptor for this
+        // AppVersion.
+        // Both applicationName and version strings are assumed to be filename-safe
+        // already,
         // except for spaces which are replaced with underscores.
-        return applicationName.replace(' ', '_') + '-' + version.replace(' ','_') + ".json";
+        return applicationName.replace(' ', '_') + '-' + version.replace(' ', '_') + ".json";
     }
 
-    public String getDescriptor() { return descriptor; }
+    public String getDescriptor() {
+        return descriptor;
+    }
 
     public String getDoi() {
         return doi;
@@ -87,7 +94,7 @@ public class AppVersion implements IsSerializable {
         return source;
     }
 
-    public List<Resource> getResources() {
+    public Set<Resource> getResources() {
         return resources;
     }
 
@@ -95,15 +102,15 @@ public class AppVersion implements IsSerializable {
         return resources.stream().map(Resource::getName).collect(Collectors.toList());
     }
 
-    public List<Tag> getTags() {
+    public Set<Tag> getTags() {
         return tags;
     }
 
-    public void setResources(List<Resource> resources) {
+    public void setResources(Set<Resource> resources) {
         this.resources = resources;
     }
 
-    public void setTags(List<Tag> tags) {
+    public void setTags(Set<Tag> tags) {
         this.tags = tags;
     }
 
@@ -111,4 +118,39 @@ public class AppVersion implements IsSerializable {
         return note;
     }
 
+    @Override
+    public boolean equals(Object o) {
+        if (this == o)
+            return true;
+        if (!(o instanceof AppVersion))
+            return false;
+
+        AppVersion other = (AppVersion) o;
+
+        return visible == other.visible &&
+                Objects.equals(applicationName, other.applicationName) &&
+                Objects.equals(version, other.version) &&
+                Objects.equals(descriptor, other.descriptor) &&
+                Objects.equals(doi, other.doi) &&
+                Objects.equals(resources, other.resources) &&
+                Objects.equals(tags, other.tags) &&
+                Objects.equals(settings, other.settings) &&
+                Objects.equals(source, other.source) &&
+                Objects.equals(note, other.note);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(
+                applicationName,
+                version,
+                descriptor,
+                doi,
+                visible,
+                resources,
+                tags,
+                settings,
+                source,
+                note);
+    }
 }
