# vip-application/src/main/java/fr/insalyon/creatis/vip/application/server/business/ApplicationBusiness.java
@@ -1,7 +1,6 @@
 package fr.insalyon.creatis.vip.application.server.business;
 
 import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -13,11 +12,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import fr.insalyon.creatis.vip.application.models.AppVersion;
 import fr.insalyon.creatis.vip.application.models.Application;
 import fr.insalyon.creatis.vip.application.server.dao.ApplicationDAO;
 import fr.insalyon.creatis.vip.core.client.VipException;
-import fr.insalyon.creatis.vip.core.client.view.user.UserLevel;
 import fr.insalyon.creatis.vip.core.models.Group;
 import fr.insalyon.creatis.vip.core.models.GroupType;
 import fr.insalyon.creatis.vip.core.models.User;
@@ -36,27 +33,24 @@ public class ApplicationBusiness extends CommonBusiness {
 
     private ApplicationDAO applicationDAO;
     private GroupBusiness groupBusiness;
-    private AppVersionBusiness appVersionBusiness;
     private PageBuilder pageBuilder;
 
     @Autowired
-    public ApplicationBusiness(ApplicationDAO applicationDAO, GroupBusiness groupBusiness,
-            AppVersionBusiness appVersionBusiness, PageBuilder pageBuilder) {
+    public ApplicationBusiness(ApplicationDAO applicationDAO, GroupBusiness groupBusiness, PageBuilder pageBuilder) {
         this.applicationDAO = applicationDAO;
         this.groupBusiness = groupBusiness;
-        this.appVersionBusiness = appVersionBusiness;
         this.pageBuilder = pageBuilder;
     }
 
     @VIPExternalSafe
     public void add(Application app) throws VipException {
-        permissions.checkLevel(UserLevel.Administrator, UserLevel.Developer);
-
-        if (getUserLevel().equals(UserLevel.Developer)) {
-            // developers can only assign from private groups they belong to
-            // at application creation
-            permissions.checkOnlyUserPrivateGroups(app.getGroups());
-        }
+        permissions.filter((chain) -> chain
+            .admin()
+            .developer(() -> {
+                // developers can only assign from private groups they belong to
+                // at application creation
+                permissions.checkOnlyUserPrivateGroups(app.getGroups());
+            }));
         try {
             applicationDAO.add(app);
 
@@ -70,19 +64,17 @@ public class ApplicationBusiness extends CommonBusiness {
 
     @VIPExternalSafe
     public void remove(String name) throws VipException {
-        Application app = getApplication(name); // not safe, do not return to user!
+        Application app = get(name);
+        if (app == null) return;
 
-        if (app == null) {
-            return;
-        }
-        permissions.checkLevel(UserLevel.Administrator, UserLevel.Developer);
-
-        if (getUserLevel().equals(UserLevel.Developer)) {
-            // this is related to developers
-            // they can only remove application from private groups they belong to
-            permissions.checkItemInList(app, getUserContextApplications());
-            permissions.checkOnlyUserPrivateGroups(app.getGroups());
-        }
+        permissions.filter((chain) -> chain
+            .admin()
+            .developer(() -> {
+                // this is related to developers
+                // they can only remove application from private groups they belong to
+                permissions.checkItemInList(app, getUserContextApplications());
+                permissions.checkOnlyUserPrivateGroups(app.getGroups());
+            }));
         try {
             logger.trace("Removing application: {}", name);
             applicationDAO.remove(name);
@@ -93,16 +85,16 @@ public class ApplicationBusiness extends CommonBusiness {
 
     @VIPExternalSafe
     public void update(Application app) throws VipException {
-        Application existingApp = getApplication(app.getName()); // not safe, do not return to user!
+        Application existingApp = permissions.shouldExist(get(app.getName()));
 
-        permissions.checkLevel(UserLevel.Administrator, UserLevel.Developer);
-
-        if (getUserLevel().equals(UserLevel.Developer)) {
-            // developer can only associate group at CREATION
-            permissions.checkUnchanged(app.getGroups(), existingApp.getGroups());
-            // edition only on application from privates groups
-            permissions.checkOnlyUserPrivateGroups(existingApp.getGroups());
-        }
+        permissions.filter((chain) -> chain
+            .admin()
+            .developer(() -> {
+                // developer can only associate group at CREATION
+                permissions.checkUnchanged(app.getGroups(), existingApp.getGroups());
+                // edition only on application from privates groups
+                permissions.checkOnlyUserPrivateGroups(existingApp.getGroups());
+            }));
         try {
             Set<String> beforeGroupsNames = existingApp.getGroupsNames();
 
@@ -208,28 +200,6 @@ public class ApplicationBusiness extends CommonBusiness {
         } catch (DAOException ex) {
             throw new VipException(ex);
         }
-    }
-
-    @VIPExternalSafe
-    public List<Application> getPublicApplications() throws VipException {
-        List<Group> publicAppGroups = groupBusiness.getPublic()
-            .stream()
-            .filter((g) -> g.getType().equals(GroupType.APPLICATION))
-            .collect(Collectors.toList());
-        List<Application> apps = new ArrayList<>();
-
-        for (Group group : publicAppGroups) {
-            for (Application app : getApplications(group)) {
-                // keep application if at least a Version is visible
-                if (appVersionBusiness.getVersions(app.getName()).stream().anyMatch(AppVersion::isVisible)) {
-                    apps.add(app);
-                }
-            }
-        }
-
-        // remove doublons + sort
-        return apps.stream().collect(Collectors.toMap(Application::getName, a -> a, (a1, a2) -> a1)).values()
-                .stream().sorted(Comparator.comparing(Application::getName)).collect(Collectors.toList());
     }
 
     public List<String> getApplicationNames() throws VipException {
